<resources>
    <string name="app_name">DaiNiMei</string>

    <string-array name="role">
        <item>顾客</item>
        <item>代购者</item>
    </string-array>

    <string name="type_home">家居</string>
    <string name="type_clothes">服装</string>
    <string name="type_gift">礼物</string>


    <string name="pay_title">请输入支付密码</string>
    <string name="pay_sure">确认支付</string>
    <string name="pay_cancel">取消</string>
    <string name="pay_content">消费金额：34.50元</string>
    <string name="infoold">请靠近NFC设备</string>
    <string name="info">请点击，使用nfc支付</string>

    <string name="item_goods">商品</string>
    <string name="item_collection">收藏</string>
    <string name="item_chats">聊天</string>
    <string name="item_me">我的</string>

    <string name="detail_brief_weight">重量：</string>
    <string name="detail_brief_name">名称：</string>
    <string name="detail_brief_time">保质期：</string>
    <string name="detail_brief_version">版本：</string>
    <string name="detail_brief_type">种类：</string>
    <string name="detail_brief_address">生产地址：</string>
    <string name="detail_brief_price">价格：</string>
    <string name="pay_num">订单总额</string>
    <string name="pay">确定</string>

    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_email_hint">请再次输入密码&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>

    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="mian_tab_set">设置</string>

    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="agree">接受</string>
    <string name="new_friend">新的朋友</string>

    <string name="chat">聊天</string>
    <string name="add_friend">添加好友</string>

    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="logout">退出登陆</string>

    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="add_collection">加入收藏</string>
    <string name="add_cart">加入购物车</string>
    <string name="add_coll_success">收藏成功</string>
    <string name="add_cart_success">添加成功，在购物车等候~</string>
    <string name="receiver">收件人</string>
    <string name="phone">联系电话</string>
    <string name="address">收货地址</string>
    <string name="title_activity_bmob">BmobActivity</string>
    <string name="str_default">null</string>
    <string name="no_data">暂无数据</string>
    <string name="good_name">新品名称</string>
    <string name="good_type">新品类别</string>
    <string name="good_price">新品价格</string>
    <string name="good_weight">产品含量</string>
    <string name="good_mdate">保质期</string>
    <string name="good_maddress">生产地址</string>
    <string name="good_detail">产品描述</string>
    <string name="content_limit">简单描述一下你的宝贝！</string>
    <string name="add_good">添加新品</string>
    <string name="good_img">产品图片</string>
    <string name="yuan">元</string>
    <string name="title_add_new">添加新商品</string>
    <string name="good_count">产品库存</string>
    <string name="detail_brief_count">库存：</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="card_info">支付卡号</string>
    <string name="title_edit_user">编辑账户信息</string>
    <string name="save">保存</string>
    <string name="sort_cos">彩妆</string>
    <string name="sort_sk">护肤品</string>
    <string name="sort_perfume">香水</string>
    <string name="edit_detail">编辑商品</string>
    <string name="delete_good">下架</string>
    <string name="update_success">更新成功</string>
    <string name="update_failure">更新失败</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failure">删除失败</string>
    <string name="todo_order">新订单</string>
    <string name="return_order">待处理订单</string>
    <string name="all_order">已完成</string>
    <string name="add_coll_fail">添加收藏失败</string>
    <string name="add_cart_fail">添加购物车失败</string>
    <string name="title_activity_order_detail">OrderDetailActivity</string>
    <string name="sended">卖家已发货</string>
    <string name="detail_delivery">物流详情</string>
    <string name="car_corp">快递公司</string>
    <string name="return_btn">申请退货</string>
    <string name="confirm_comm">确认收货并评价</string>
    <string name="ondeliver_order">已发货</string>
    <string name="todeliver_order">待发货</string>
    <string name="title_activity_order_confirm">OrderConfirmActivity</string>
    <string name="reconfirm_msg">确认收货后将无法退货，请确认商品已配送到并无质量问题。</string>
    <string name="reconfirm_title">确认宝贝已送达？</string>
    <string name="deal_comment">交易评价</string>
    <string name="comment_good">好</string>
    <string name="comment_mid">中</string>
    <string name="comment_bad">差</string>
    <string name="comment_hint">宝贝满足你的期待吗？说说它的优点和美中不足的地方吧</string>
    <string name="commit">提交</string>
    <string name="back">返回</string>
    <string name="reconfirm_refund">申请退货</string>
    <string name="refund_reason">退货原因</string>
    <string name="refund_hint">请输入退款说明</string>
    <string name="detail_brief_sort">类别：</string>
    <string name="detail_brief_seller">代购人：</string>
    <string name="detail_brief_inner">含量：</string>
    <string name="add_deliver">添加物流信息</string>
    <string name="add_corp_info">添加发货信息</string>
    <string name="down">下架</string>
    <string name="return_confirm">同意退货</string>
    <string name="label_cart">购物车</string>
    <string name="label_cancel">取消</string>
    <string name="no_result"><![CDATA[>.< 没有找到您想要的东西，请重新搜索！]]></string>
    <string name="no_goods"><![CDATA[>.< 没有相关商品！]]></string>
    <string name="no_orders"><![CDATA[>.< 没有找到相关订单！]]></string>
    <string name="account_info">账号信息</string>
    <string name="label_account">账号信息</string>
    <string name="label_username">用户名</string>
    <string name="label_nickname">昵称</string>
    <string name="label_receiver">默认收件人</string>
    <string name="label_phone">联系方式</string>
    <string name="label_address">默认收货地址</string>
    <string name="label_save">保存</string>
    <string name="refund_order">退货中</string>
    <string name="label_logout">退出账号</string>
    <string name="no_shoppinggoods">购物车空空如也，请添加新的商品！</string>
    <string name="confirm_address">请确认收货信息！</string>
    <string name="label_pay_type">付款方式：</string>
    <string name="seller_list">顾客列表</string>
    <string name="buyer_list">商家列表</string>
    <string name="good_list">商品列表</string>
    <string name="label_good_info">商品详情</string>
    <string name="label_user_info">顾客信息管理</string>
    <string name="label_seller_info">代购个人及货品信息管理</string>
    <string name="label_chat_info">买卖双方交流信息管理</string>
    <string name="label_kefu_info">客服管理</string>
    <string name="add_comment">评价此次交易</string>
    <string name="msg_seller_comment">请对买家的交流态度，收货速度，以及顾客对商品的态度进行评价。</string>
    <string name="weixin">微信</string>
    <string name="zhifubao">支付宝</string>
    <string name="yinhangka">银行卡</string>
    <string name="buyer">买家：</string>
    <string name="seller">卖家：</string>
    <string name="no_result_comment"><![CDATA[>.< 无查询结果]]></string>
    <string name="label_edit">编辑</string>


</resources>
