<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/main_theme_color"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_order_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/reconfirm_title"
            android:textColor="@color/white"
            android:textSize="28dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/reconfirm_msg"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/deal_comment"
            android:textSize="18dp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_gray" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_good"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/main_theme_color"
                android:checked="true"
                android:text="@string/comment_good" />

            <RadioButton
                android:id="@+id/rb_mid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/main_theme_color"
                android:text="@string/comment_mid" />

            <RadioButton
                android:id="@+id/rb_bad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/main_theme_color"
                android:text="@string/comment_bad" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_gray" />

        <EditText
            android:id="@+id/tv_comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/comment_hint"
            android:padding="5dp"
            android:textColorHint="@color/base_color_text_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right|bottom">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btn_commit"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:background="@drawable/button"
                android:text="@string/commit"
                android:textColor="@color/white"
                android:textSize="16dp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>