<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/main_theme_color"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/title_add_new"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_name" />

            <EditText
                android:id="@+id/add_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:singleLine="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/bg_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_price" />

            <EditText
                android:id="@+id/add_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:inputType="number"
                android:minWidth="50dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yuan" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/good_type" />

            <Spinner
                android:id="@+id/et_type"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:entries="@array/type_titles"
                android:paddingLeft="5dp"></Spinner>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_count" />

            <EditText
                android:id="@+id/add_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:inputType="number"
                android:singleLine="true" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_weight" />

            <EditText
                android:id="@+id/add_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:singleLine="true" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_mdate" />


            <EditText
                android:id="@+id/add_mdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:singleLine="true" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_maddress" />

            <EditText
                android:id="@+id/add_maddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:singleLine="true" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingTop="15dp"
                android:text="@string/good_detail" />

            <EditText
                android:id="@+id/add_content"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:gravity="top"
                android:hint="@string/content_limit"
                android:paddingTop="15dp" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingTop="15dp"
                android:text="@string/good_img" />

            <ImageView
                android:id="@+id/good_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:scaleType="fitStart"
                android:src="@mipmap/product_default" />

            <ImageView
                android:id="@+id/upload_done"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@mipmap/icon_check"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_add_new"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:background="@drawable/button"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/add_good"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>