<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <ImageView
            android:id="@+id/imageview_detail"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/product_default" />

        <TextView
            android:id="@+id/textView_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:text="详细信息"
            android:textColor="@color/main_theme_color"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:collapseColumns="2">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textView_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail_brief_name"
                    android:textColor="#535353"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail_brief_price"
                    android:textColor="#535353"
                    android:textSize="12sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textView_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail_brief_time"
                    android:textColor="#535353"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail_brief_address"
                    android:textColor="#535353"
                    android:textSize="12sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textView_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail_brief_count"
                    android:textColor="#535353"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail_brief_inner"
                    android:textColor="#535353"
                    android:textSize="12sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textView_sort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail_brief_sort"
                    android:textColor="#535353"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView_seller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail_brief_seller"
                    android:textColor="#535353"
                    android:textSize="12sp" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/textView_production"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:text="具体介绍"
            android:textColor="@color/main_theme_color"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/textView_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:text="content"
                android:textColor="#535353"
                android:textSize="12sp" />
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:gravity="right">

        <Button
            android:id="@+id/down_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/button"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/down"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:gravity="right">

        <TextView
            android:id="@+id/add_collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="@drawable/btn_background"
            android:padding="5dp"
            android:text="@string/add_collection"
            android:textColor="@color/main_theme_color" />

        <TextView
            android:id="@+id/add_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            android:padding="5dp"
            android:text="@string/add_cart"
            android:textColor="@color/main_theme_color" />
    </LinearLayout>
</LinearLayout>