<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/main_theme_color"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_order_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/reconfirm_refund"
            android:textColor="@color/white"
            android:textSize="28dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/refund_reason"
            android:textSize="18dp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_gray" />

        <Spinner
            android:id="@+id/refund_spinner"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:entries="@array/refund_reason"></Spinner>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_gray" />

        <EditText
            android:id="@+id/tv_comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:gravity="top"
            android:hint="@string/refund_hint"
            android:padding="5dp"
            android:textColorHint="@color/base_color_text_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right|bottom">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btn_commit"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:background="@drawable/button"
                android:text="@string/commit"
                android:textColor="@color/white"
                android:textSize="16dp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
